# django-docker-project_template

./: README.md  project.py
container-config/: README.md  base.docker-compose.yml  base.dockerfile  development.docker-compose.yml  production.docker-compose.yml
project/: pyproject.toml
