[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["John Doe <john.doe@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# Example: Django = "^4.2.6"

[tool.poetry.group.dev.dependencies]
# Example: pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
